--- a/src/app/shared/components/product-list/product-list.component.html
+++ b/src/app/shared/components/product-list/product-list.component.html
@@ -24,7 +24,7 @@
                 loading="lazy">
             </div>
             <mat-card-content>
-              <div class="mb-4">
+              <div class="mb-4 h-24">
                 <p class="text-2xl">
                   <strong>{{ product.displayPrice | currency:'VND' }}</strong>
                 </p>
