--- a/src/app/shared/components/product-list/product-list.component.html
+++ b/src/app/shared/components/product-list/product-list.component.html
@@ -20,7 +20,7 @@
                 product.category.subName }}</mat-card-subtitle>
             </mat-card-header>
             <div class="my-2 aspect-w-1 aspect-h-1">
-              <img class="object-cover block !mx-auto" mat-card-image [src]="product.images[0]" [alt]="product.name"
+              <img class="object-contain block !mx-auto" mat-card-image [src]="product.images[0]" [alt]="product.name"
                 loading="lazy">
             </div>
             <mat-card-content>
