--- a/src/app/modules/home/pages/find-products/find-products.component.html
+++ b/src/app/modules/home/pages/find-products/find-products.component.html
@@ -46,6 +46,12 @@
                   <mat-option value="desc(name)">
                     Tên giảm dần
                   </mat-option>
+                  <mat-option value="desc(_id)">
+                    Mới nhất
+                  </mat-option>
+                  <mat-option value="asc(_id)">
+                    Cũ nhất
+                  </mat-option>
                 </mat-select>
               </mat-form-field>
             </div>
