--- a/src/app/modules/home/pages/profiles/profiles.component.html
+++ b/src/app/modules/home/pages/profiles/profiles.component.html
@@ -50,7 +50,7 @@
           <ng-container *ngrxLet="ratingList$ as ratingList">
             <div class="m-4 p-4 shadow-sm bg-white rounded space-y-2">
               <ng-container *ngIf="ratingList.totalResults">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
                   <mat-card class="mat-elevation-z4" *ngFor="let rating of ratingList.results">
                     <mat-card-header>
                       <mat-card-title>{{ rating.user.fullName }}</mat-card-title>
