--- a/src/app/modules/admin/pages/products/products.component.html
+++ b/src/app/modules/admin/pages/products/products.component.html
@@ -15,19 +15,15 @@
         </ng-container>
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên sản phẩm</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          <td class="max-w-48" mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Danh mục</th>
           <td mat-cell *matCellDef="let element">{{ element.category.name }} - {{ element.category.subName }}</td>
         </ng-container>
-        <ng-container matColumnDef="startingPrice">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá khởi điểm</th>
-          <td mat-cell *matCellDef="let element">{{ element.startingPrice | currency:'VND' }}</td>
-        </ng-container>
-        <ng-container matColumnDef="priceStep">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Bước giá</th>
-          <td mat-cell *matCellDef="let element">{{ element.priceStep | currency:'VND' }}</td>
+        <ng-container matColumnDef="displayPrice">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá hiện tại</th>
+          <td mat-cell *matCellDef="let element">{{ element.displayPrice | currency:'VND' }}</td>
         </ng-container>
         <ng-container matColumnDef="buyPrice">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá mua ngay</th>
@@ -40,7 +36,7 @@
         </ng-container>
         <ng-container matColumnDef="expiry">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Kết thúc</th>
-          <td mat-cell *matCellDef="let element">{{ element.expiry | relativeTime:'259200000' }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.expiry | relativeTime:'259200000':pipeTrigger }}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Tùy chọn</th>
