--- a/src/app/modules/home/pages/products/products.component.html
+++ b/src/app/modules/home/pages/products/products.component.html
@@ -10,8 +10,7 @@
         <mat-tab label="Hình ảnh">
           <div class="m-4 p-4 shadow-sm bg-white rounded">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-              <div class="my-2 aspect-w-1 aspect-h-1 shadow-md"
-                *ngFor="let image of product.images; index as i; trackBy: trackProduct">
+              <div class="my-2 aspect-w-1 aspect-h-1 shadow-md" *ngFor="let image of product.images">
                 <img class="object-cover cursor-pointer" [src]="image" [alt]="product.name" loading="lazy"
                   (click)="viewImageDialog(image)">
               </div>
@@ -379,8 +378,10 @@
           </mat-card-subtitle>
         </mat-card-header>
         <div class="my-2 aspect-w-1 aspect-h-1">
-          <img class="object-contain block !mx-auto" mat-card-image [src]="product.images[0]" [alt]="product.name"
-            loading="lazy">
+          <mat-carousel [proportion]="100" [hideIndicators]="false">
+            <mat-carousel-slide *ngFor="let image of product.images" [image]="image" [hideOverlay]="true">
+            </mat-carousel-slide>
+          </mat-carousel>
         </div>
         <mat-card-content>
           <div class="mb-4">
