--- a/src/app/shared/components/product-list/product-list.component.html
+++ b/src/app/shared/components/product-list/product-list.component.html
@@ -8,8 +8,8 @@
     </ng-container>
   </ng-template>
   <ng-template #hasProducts>
-    <div class="grid grid-cols-1"
-      [class]="rowSize === 1 ? '' : rowSize === 4 ? 'md:grid-cols-2 gap-4 lg:grid-cols-4' : 'md:grid-cols-2 gap-4 lg:grid-cols-5'">
+    <div class="grid grid-cols-1 gap-4"
+      [class]="rowSize === 1 ? '' : rowSize === 4 ? 'md:grid-cols-2 lg:grid-cols-4' : 'md:grid-cols-2 lg:grid-cols-5'">
       <ng-container *ngFor="let product of _productList; index as i; trackBy: trackProduct">
         <mat-card class="!flex flex-col">
           <a [routerLink]="['/home', 'products', product._id]" class="flex-grow">
@@ -55,6 +55,10 @@
               </mat-chip-list>
               <mat-chip-list *ngIf="(product.createdAt | diffTime) < 3600000" aria-label="New product">
                 <mat-chip>Mới</mat-chip>
+              </mat-chip-list>
+              <mat-chip-list *ngIf="showWinning && product.winner && userId && product.winner._id === userId"
+                aria-label="Winning product">
+                <mat-chip>Giữ giá</mat-chip>
               </mat-chip-list>
             </div>
             <ng-container *ngrxLet="user$ as user">
