--- a/src/app/modules/home/pages/products/products.component.html
+++ b/src/app/modules/home/pages/products/products.component.html
@@ -378,7 +378,7 @@
           </mat-card-subtitle>
         </mat-card-header>
         <div class="my-2 aspect-w-1 aspect-h-1">
-          <mat-carousel [proportion]="100" [hideIndicators]="false">
+          <mat-carousel [proportion]="100" [hideArrows]="false">
             <mat-carousel-slide *ngFor="let image of product.images" [image]="image" [hideOverlay]="true">
             </mat-carousel-slide>
           </mat-carousel>
